--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <nav class="bg-white shadow-sm fixed w-full top-0 z-50">
    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16">
-     <div class="flex items-center"><a href="#" onclick="showMainPage()" class="text-2xl font-bold text-text-dark hover:text-primary transition-colors duration-200 cursor-pointer">shaare-logo</a>
+     <div class="flex items-center"><a href="#" onclick="showMainPage()" class="text-2xl font-bold text-text-dark hover:text-primary transition-colors duration-200 cursor-pointer">shaare</a>
      </div>
      <div class="hidden md:block">
       <div class="ml-10 flex items-baseline space-x-8"><a href="#home" class="text-text-body hover:text-primary transition-colors duration-200 px-3 py-2 text-sm font-medium">Home</a> <a href="#" onclick="showAboutPage()" class="text-text-body hover:text-primary transition-colors duration-200 px-3 py-2 text-sm font-medium">About Us</a> <a href="#pricing" onclick="showMainPage(); setTimeout(() => document.getElementById('pricing').scrollIntoView({behavior: 'smooth'}), 100)" class="text-text-body hover:text-primary transition-colors duration-200 px-3 py-2 text-sm font-medium">Pricing</a> <a href="#" onclick="showContactModal()" class="text-text-body hover:text-primary transition-colors duration-200 px-3 py-2 text-sm font-medium">Contact Us</a> <button onclick="showBookingPage()" class="bg-primary hover:bg-primary-dark text-white px-6 py-2 rounded-lg font-medium transition-colors duration-200">Book Now</button>
