--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
    <footer class="bg-text-dark text-white py-12">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
      <div class="grid md:grid-cols-4 gap-8">
-      <div><a href="#" onclick="showMainPage()" class="text-2xl font-bold mb-4 block hover:text-primary transition-colors duration-200 cursor-pointer">shaare-logo</a>
+      <div><a href="#" onclick="showMainPage()" class="text-2xl font-bold mb-4 block hover:text-primary transition-colors duration-200 cursor-pointer">shaare</a>
        <p class="text-gray-300">Professional cleaning services you can trust.</p>
       </div>
       <div>
